# spatiotemporal-datacenter-coordination

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
paper/: main.tex  refs.bib
src/analysis/: complementarity_analysis.py  stress_analysis.py
src/data_collection/: README.md  clean_bpa.py  clean_caiso.py  clean_pjm.py  fetch_bpa.py  fetch_caiso.py  fetch_pjm.py
src/plotting/: visualize_event.py  visualize_simulation.py  visualize_stress.py  visualize_sweep.py
src/simulation/: baselines.py  mip_coordinator.py  run_simulation.py  run_sweep.py  workload.py
